--- a/src/Makefile
+++ b/src/Makefile
@@ -9,13 +9,15 @@ CFG = start4000.cfg
 DEP = defines.asm font7x8.asm inline_print.asm medit.asm tedit.asm
 
 run: $(DISK_DIR)/gedit.dsk
+	linapple
 
 $(DISK_DIR)/%.dsk: $(BUILD_DIR)/%.apple2
 	cp -f $(TEMPLATE_DISK) $@
 	$(APPLE_COMMANDER) -p  $@ $(notdir $(basename $@)).system sys < $(LOADER)
 	$(APPLE_COMMANDER) -as $@ $(notdir $(basename $@))        bin < $<
-	linapple
+
 
 $(BUILD_DIR)/%.apple2: %.asm $(DEP) $(CFG)
-	cl65 -t apple2 -u __EXEHDR__ $< apple2.lib  -o $(BUILD_DIR)/gedit.apple2 -C $(CFG)
+	ca65 -t apple2               $<             -l $(BUILD_DIR)/$(basename $<).dis
+	cl65 -t apple2 -u __EXEHDR__ $< apple2.lib  -o $(BUILD_DIR)/$(basename $<).apple2 -C $(CFG)
 
